--- a/src/CollectArticles.ipynb
+++ b/src/CollectArticles.ipynb
@@ -21,15 +21,25 @@
     "#The 'query' key contains the search terms exactly\n",
     "args = {'query':'Apis Mellifera','apiKey':'582c2ee616e8c4119ae4201ce59a5e06'}\n",
     "r = requests.get('http://api.elsevier.com/content/search/scopus?'+urllib.urlencode(args))\n",
-    "data = r.json()"
+    "data = r.json()\n",
+    "results = int(data['search-results']['opensearch:totalResults'])\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39085\n"
+     ]
+    }
+   ],
    "source": [
+    "print results\n",
     "login = open(\"./LoginInfo.txt\",\"r\")\n",
     "user = login.readline()\n",
     "password = login.readline()\n",
@@ -45,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Kalman filter\n"
+      "[<span class=\"badges\">Hough transform</span>, <span class=\"badges\">Kalman filter</span>, <span class=\"badges\">Pollen detection</span>, <span class=\"badges\">Pollen measurement</span>, <span class=\"badges\">Receiver operating characteristic</span>]\n"
      ]
     }
    ],
@@ -54,7 +64,7 @@
     "bSoupObj = BeautifulSoup(abstractPage.content,\"html5lib\")\n",
     "abstractText = bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}).findAll(\"span\",{\"class\":\"badges\"})\n",
     "# print abstractText\n",
-    "print abstractText[1].text"
+    "print abstractText"
    ]
   },
   {
@@ -79,263 +89,162 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n",
-      "no abs\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'search-results'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-11-f53809767655>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     27\u001b[0m     \u001b[0mdata\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'http://api.elsevier.com/content/search/scopus?'\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0murllib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0murlencode\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m'&start='\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart_point\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     28\u001b[0m     \u001b[0mstart_point\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m25\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 29\u001b[1;33m     \u001b[1;32mif\u001b[0m \u001b[1;34m'entry'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'search-results'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     30\u001b[0m         \u001b[0mentry_size\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'search-results'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'entry'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     31\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'search-results'"
+      "25\n"
      ]
     }
    ],
    "source": [
-    "f = open(\"../data/paperTable.tsv\",\"w\")\n",
+    "f = open(\"../data/paperTable1.tsv\",\"w\")\n",
     "entry_size = len(data['search-results']['entry'])\n",
-    "start_point = 25\n",
-    "while(entry_size>0):\n",
-    "    for entry in data['search-results']['entry']:\n",
-    "        #gets abstract text\n",
-    "        abstractPage = requests.get(entry['link'][2]['@href'],auth = HTTPBasicAuth(user,password))\n",
-    "        bSoupObj = BeautifulSoup(abstractPage.content,\"html5lib\")\n",
-    "        if(len(bSoupObj.findAll(\"p\"))>1):\n",
-    "            abstractText = bSoupObj.findAll(\"p\")[1].text\n",
-    "        \n",
-    "        #creates lists of keywords, seperated into author keywords and scopus assigned keywords\n",
-    "            aKeywords = \"\"\n",
-    "            sKeywords = \"\"\n",
-    "            if bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}) is not None:\n",
-    "                for word in bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}).findAll(\"li\"):\n",
-    "                    aKeywords+= word.text+\", \"\n",
-    "            if bSoupObj.find(\"section\",{\"id\":\"indexedKeywords\"}) is not None:\n",
-    "                for word in bSoupObj.find(\"section\",{\"id\":\"indexedKeywords\"}).findAll(\"span\"):\n",
-    "                    sKeywords+= word.text+\", \"\n",
-    "\n",
-    "            #prints title, abstract, tags, and date created\n",
-    "            if abstractText.encode(\"utf8\")==\"[No abstract available]\":\n",
-    "                print(\"no abs\")\n",
-    "            else:\n",
-    "                f.write(entry['dc:title'].encode(\"utf8\")+\"\\t\"+abstractText.encode(\"utf8\")+\"\\t\"+aKeywords[:-2].encode(\"utf8\")+\"\\t\"+sKeywords[:-2].encode(\"utf8\")+\"\\t\"+entry['prism:coverDate'].encode(\"utf8\")+\"\\n\")\n",
-    "    data = requests.get('http://api.elsevier.com/content/search/scopus?'+urllib.urlencode(args)+'&start='+str(start_point)).json()\n",
-    "    start_point+=25\n",
-    "    if 'entry' in data['search-results']:\n",
-    "        entry_size+=len(data['search-results']['entry'])\n",
-    "    else:\n",
-    "        break\n",
-    "f.close()\n",
-    "print(\"done\")"
+    "print entry_size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hough transform\n",
-      "Kalman filter\n",
-      "Pollen detection\n",
-      "Pollen measurement\n",
-      "Receiver operating characteristic\n"
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n",
+      "{u'service-error': {u'status': {u'statusText': u'Exceeds the number of search results', u'statusCode': u'INVALID_INPUT'}}}\n"
      ]
     }
    ],
    "source": [
-    "for a in abstractText:\n",
-    "    print a.text\n"
+    "# f = open(\"../data/paperTable.tsv\",\"w\")\n",
+    "# entry_size = len(data['search-results']['entry'])\n",
+    "# start_point = 25\n",
+    "import threading\n",
+    "import CustomApi as api\n",
+    "dist = results/3\n",
+    "def readAbstracts(start,stop):\n",
+    "    while(start < stop):\n",
+    "        data = requests.get('http://api.elsevier.com/content/search/scopus?'+urllib.urlencode(args)+'&start='+str(start)).json()\n",
+    "        entries = None\n",
+    "        try:\n",
+    "            print data\n",
+    "            entries = data['search-results']['entry']\n",
+    "            print entries\n",
+    "        except:\n",
+    "            start += 25\n",
+    "            continue\n",
+    "        for entry in entries:\n",
+    "            #gets abstract text\n",
+    "            abstractPage = requests.get(entry['link'][2]['@href'],auth = HTTPBasicAuth(user,password))\n",
+    "            bSoupObj = BeautifulSoup(abstractPage.content,\"html5lib\")\n",
+    "            if(len(bSoupObj.findAll(\"p\"))>1):\n",
+    "                abstractText = bSoupObj.findAll(\"p\")[1].text\n",
+    "                #creates lists of keywords, seperated into author keywords and scopus assigned keywords\n",
+    "                aKeywords = \"\"\n",
+    "                sKeywords = \"\"\n",
+    "                if bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}) is not None:\n",
+    "                    for word in bSoupObj.find(\"section\",{\"id\":\"authorKeywords\"}).findAll(\"li\"):\n",
+    "                        aKeywords+= word.text+\", \"\n",
+    "                if bSoupObj.find(\"section\",{\"id\":\"indexedKeywords\"}) is not None:\n",
+    "                    for word in bSoupObj.find(\"section\",{\"id\":\"indexedKeywords\"}).findAll(\"span\"):\n",
+    "                        sKeywords+= word.text+\", \"\n",
+    "\n",
+    "                #prints title, abstract, tags, and date created\n",
+    "                if abstractText.encode(\"utf8\")==\"[No abstract available]\":\n",
+    "                    print(\"no abs\")\n",
+    "                else:\n",
+    "                    try:\n",
+    "                        #abstracts.append(api.MyAbstract(title=entry['dc:title'].encode(\"utf8\"),date=entry['prism:coverDate'].encode(\"utf8\"),text=abstractText.encode(\"utf8\")))\n",
+    "                        f.write(entry['dc:title'].encode(\"utf8\")+\"\\t\"+abstractText.encode(\"utf8\")+\"\\t\"+aKeywords[:-2].encode(\"utf8\")+\"\\t\"+sKeywords[:-2].encode(\"utf8\")+\"\\t\"+entry['prism:coverDate'].encode(\"utf8\")+\"\\n\")\n",
+    "                    except:\n",
+    "                        pass\n",
+    "        start += 25\n",
+    "# thread1 = threading.Thread(target=readAbstracts,args=(5000,6000))\n",
+    "# thread2 = threading.Thread(target=readAbstracts,args=(6000,7000))\n",
+    "# thread3 = threading.Thread(target=readAbstracts,args=(7000,8000))\n",
+    "# thread1.start()\n",
+    "# thread2.start()\n",
+    "# thread3.start()\n",
+    "# while True:\n",
+    "#     if thread1.isAlive() or thread2.isAlive() or thread3.isAlive():\n",
+    "#         continue\n",
+    "#     else:\n",
+    "#         break\n",
+    "readAbstracts(5000,6000)\n",
+    "#readAbstracts(0,25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import datetime\n",
+    "f = lambda x : datetime.strptime(x.date,'%Y-%m-%d')\n",
+    "abstracts.sort(key=f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abstracts[0]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.close()"
    ]
   },
   {
