--- a/src/TopicModeling.ipynb
+++ b/src/TopicModeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "from gensim.corpora import Dictionary\n",
     "from collections import namedtuple\n",
     "import gensim.parsing.preprocessing as processing\n",
-    "import CustomAlgorithms as algos\n",
+    "import CustomApi as api\n",
     "#Start Global Variables and Types\n",
     "#Number of topics the model should index\n",
     "numberOfTopics = 125\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,18 +43,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\tools\\Anaconda3\\envs\\python2\\lib\\site-packages\\gensim\\parsing\\preprocessing.py:105: UnicodeWarning: Unicode equal comparison failed to convert both arguments to Unicode - interpreting them as being unequal\n",
-      "  return \" \".join(w for w in s.split() if w not in STOPWORDS)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a set of frequent words\n",
     "stopFile = open(\"../data/stopwords.txt\",\"r\")\n",
@@ -83,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,29 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-06-04 19:39:47,401 : INFO : using symmetric alpha at 0.008\n",
-      "2018-06-04 19:39:47,404 : INFO : using symmetric eta at 0.008\n",
-      "2018-06-04 19:39:47,407 : INFO : using serial LDA version on this node\n",
-      "2018-06-04 19:39:47,516 : INFO : running online (single-pass) LDA training, 125 topics, 1 passes over the supplied corpus of 1044 documents, updating model once every 1044 documents, evaluating perplexity every 1044 documents, iterating 50x with a convergence threshold of 0.001000\n",
-      "2018-06-04 19:39:47,519 : WARNING : too few updates, training might not converge; consider increasing the number of passes or iterations to improve accuracy\n",
-      "2018-06-04 19:39:50,732 : INFO : -22.686 per-word bound, 6746733.6 perplexity estimate based on a held-out corpus of 1044 documents with 116344 words\n",
-      "2018-06-04 19:39:50,733 : INFO : PROGRESS: pass 0, at document #1044/1044\n",
-      "2018-06-04 19:39:53,381 : INFO : topic #33 (0.008): 0.011*\"colony\" + 0.009*\"pesticide\" + 0.008*\"©\" + 0.007*\"imidacloprid\" + 0.007*\"clothianidin\" + 0.006*\"varroa\" + 0.006*\"thiacloprid\" + 0.005*\"mite\" + 0.005*\"mites\" + 0.005*\"morphometric\"\n",
-      "2018-06-04 19:39:53,382 : INFO : topic #5 (0.008): 0.019*\"varroa\" + 0.017*\"carbendazim\" + 0.013*\"esp\" + 0.012*\"esterases\" + 0.009*\"enzymes\" + 0.009*\"resistance\" + 0.009*\"parasite\" + 0.009*\"rna\" + 0.008*\"colony\" + 0.008*\"soil\"\n",
-      "2018-06-04 19:39:53,385 : INFO : topic #31 (0.008): 0.011*\"mortality\" + 0.010*\"ph\" + 0.010*\"protease\" + 0.009*\"©\" + 0.009*\"mite\" + 0.008*\"activities\" + 0.008*\"maize\" + 0.008*\"pathogens\" + 0.007*\"colony\" + 0.006*\"monitoring\"\n",
-      "2018-06-04 19:39:53,388 : INFO : topic #124 (0.008): 0.026*\"pollen\" + 0.016*\"insecticides\" + 0.012*\"nectar\" + 0.010*\"pollinators\" + 0.009*\"insecticide\" + 0.008*\"varroa\" + 0.008*\"neonicotinoid\" + 0.007*\"pesticide\" + 0.007*\"©\" + 0.007*\"neonicotinoids\"\n",
-      "2018-06-04 19:39:53,390 : INFO : topic #90 (0.008): 0.015*\"varroa\" + 0.014*\"mite\" + 0.013*\"colony\" + 0.008*\"mortality\" + 0.008*\"destructor\" + 0.007*\"©\" + 0.007*\"virus\" + 0.005*\"collapse\" + 0.005*\"rice\" + 0.005*\"multiple\"\n",
-      "2018-06-04 19:39:53,394 : INFO : topic diff=75.825912, rho=1.000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train the model and set number of topics\n",
     "logging.basicConfig(format='%(asctime)s : %(levelname)s : %(message)s', level=logging.INFO)\n",
@@ -229,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,29 +219,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "maximum recursion depth exceeded",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-18-07352ca7bf29>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0malist\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0maccess\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0malgos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBinarySearch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malist\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mterm\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstop\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0malist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maccessElement\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0maccess\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;31m#alist[0]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\USER\\Documents\\GitHub\\Honey-Bee-Health\\src\\CustomAlgorithms.pyc\u001b[0m in \u001b[0;36mBinarySearch\u001b[1;34m(aList, term, start, stop, accessElement, toLastOccurence)\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mmiddle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0maccessElement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmiddle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mterm\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m             \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmiddle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "... last 1 frames repeated, from the frame below ...\n",
-      "\u001b[1;32mC:\\Users\\USER\\Documents\\GitHub\\Honey-Bee-Health\\src\\CustomAlgorithms.pyc\u001b[0m in \u001b[0;36mBinarySearch\u001b[1;34m(aList, term, start, stop, accessElement, toLastOccurence)\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mmiddle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0maccessElement\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmiddle\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mterm\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m             \u001b[0mstart\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmiddle\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: maximum recursion depth exceeded"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "alist = [(1,1),(2,2),(3,3),(3,3)]\n",
     "access = lambda x: x[1]\n",
     "algos.BinarySearch(alist,term=3,start=0,stop=len(alist)-1,accessElement=access)\n",
     "#alist[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyAbstract(title='Pharmacogenomic Biomarkers for Improved Drug Therapy\\xe2\\x80\\x94Recent Progress and Future Developments', date=datetime.datetime(2018, 1, 1, 0, 0), text=u'much interindividual variability efficacy adverse reactions due polymorphisms genes encoding proteins involved pharmacokinetics pharmacodynamics immunological responses pharmacogenetic identified multitude genedrug associations resulted genetically guided dosing decisions yield success rate pharmacological rapid technological developments genetic analyses reveal genetic variants importance action much previously thought true personalized prediction requires attention millions rare mutations review evolutionary background genetic polymorphisms drugmetabolizing enzymes provide examples current pharmacogenomic biomarkers give update germline somatic genome biomarkers clinical practice discuss current technology emphasis complex genetic loci review current initiatives validation pharmacogenomic biomarkers scenarios future taking rare genetic variants account true personalized genetically guided prescription conclude pharmacogenomic information patient stratification value tailor optimized regimens particularly oncology routine pharmacogenomic biomarkers clinical practice therapeutic areas currently sparse prospects future implementation scrutinized international consortia \\xa9 2017 authorsabacavir allopurinol amoxicillin plus clavulanic atorvastatin azathioprine biological marker capecitabine carbamazepine clopidogrel codeine diclofenac metabolizing enzyme efavirenz flucloxacillin fluorouracil irinotecan isoniazid lumiracoxib mercaptopurine metoclopramide nevirapine perhexiline phenytoin proton pump inhibitor simvastatin tegafur ticlopidine unindexed warfarin ximelagatran biological marker abcb1 gene acute lymphoblastic leukemia alk gene allele analgesic bone marrow suppression cardiotoxicity clinical practice cyp gene cyp28 gene cyp2a6 gene cyp2b6 gene cyp2c19 gene cyp2c8 gene cyp2c9 gene cyp2d6 gene cyp3a4 gene cyp3a5 gene cyp4f2 gene cyp6 gene cyp6bq23 gene cyp6cy3 gene cyp6g1 gene cyp9q1 gene cyp9q2 gene cyp9q3 gene diarrhea dpyd gene dress syndrome efficacy information safety tolerability dystonia egfr gene erbb2 gene european medicines agency fgfr gene administration g6pd gene gene gene locus genetic variability genome genotype geographic distribution germline genome gstm1 gene heredity hla b gene hla gene homozygosity immunodeficiency virus infection hypersensitivity jak2 gene kit gene loss function mutation myopathy neurologic neurotoxicity neutropenia next generation sequencing oncogene oncology pdgfra gene personalized medicine pharmacodynamics pharmacogenetic variant pharmacogenomics prescription public review rhabdomyolysis slc19a1 gene slc22a1 gene slco1b1 gene somatic genome somatic mutation stevens johnson syndrome thrombocytopenia thromboembolism toxic epidermal necrolysis toxic hepatitis tpmt gene indication ugt1a1 gene ugt2b15 gene ugt2b17 gene vkorc1 gene genetic polymorphism genetic variation neoplasm patient satisfaction pharmacogenetics biomarkers genetic variation humans neoplasms oncogenes patient satisfaction pharmacogenetics polymorphism genetic precision medicine')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abstracts[len(abstracts)-1]"
    ]
   },
   {
