--- a/src/TopicModeling.ipynb
+++ b/src/TopicModeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,14 +219,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MyAbstract(title='Life history evolution in social insects: A female perspective', date=datetime.datetime(2016, 8, 1, 0, 0), text=u'social known unusual life histories fecund longlived queens sterile shortlived workers review ultimate underlying variation life history strategies social whose social life reshapes common tradeoffs fecundity longevity interspecific life history variation colony size mediated changes division labour extrinsic mortality addition ratio juvenile mortality social queen influence life history trajectories discuss hypotheses explaining queen fecundity lifespan singlequeen societies suggest directions evolution life history variation social \\xa9 2016 elsevier inc rights reserved')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "alist = [(1,1),(2,2),(3,3),(3,3)]\n",
-    "access = lambda x: x[1]\n",
-    "algos.BinarySearch(alist,term=3,start=0,stop=len(alist)-1,accessElement=access)\n",
-    "#alist[0]"
+    "\n",
+    "access = lambda x: x.date.year\n",
+    "api.BinarySearch(abstracts,term=2016,accessElement=access)\n",
+    "abstracts[822]\n"
    ]
   },
   {
